--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,15 @@
     "extra": {
         "statamic": {
             "name": "Statamic Filter Builder",
-            "description": "Statamic Filter Builder addon"
+            "description": "Allows you to build advanced collection filters through the control panel."
         },
         "laravel": {
             "providers": [
                 "Tv2regionerne\\StatamicFilterBuilder\\ServiceProvider"
             ]
         }
+    },
+    "require": {
+        "statamic/cms": "^4.0"
     }
 }
