--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,11 @@
             "Tv2regionerne\\StatamicFilterBuilder\\": "src"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests"
+        }
+    },
     "extra": {
         "statamic": {
             "name": "Statamic Filter Builder",
@@ -18,5 +23,17 @@
     },
     "require": {
         "statamic/cms": "^4.0"
+    },
+    "require-dev": {
+        "nunomaduro/collision": "^7.4",
+        "orchestra/testbench": "^8.3",
+        "pestphp/pest": "^2.4",
+        "pestphp/pest-plugin-watch": "^2.0"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true,
+            "pixelfear/composer-dist-plugin": true
+        }
     }
 }
