Solve issues with json data not being an array. Add a GitHub action for automated tests Tidy up some syntax

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "name": "tv2regionerne/statamic-filter-builder",
+    "scripts": {
+        "test": "./vendor/bin/pest"
+    },
     "autoload": {
         "psr-4": {
             "Tv2regionerne\\StatamicFilterBuilder\\": "src"
