--- a/.github/workflows/php_pest_tests.yml
+++ b/.github/workflows/php_pest_tests.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: ['8.0', '8.1', '8.2']  # Define the PHP versions you want to test against
+        php-versions: ['8.1', '8.2']  # Define the PHP versions you want to test against
 
     steps:
       - name: Checkout code
