--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,31 +1,30 @@
-name: Run Pest Tests
+name: Run Tests
 
 on:
+  pull_request:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+
 
 jobs:
   run-tests:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        php-versions: ['8.1', '8.2']  # Define the PHP versions you want to test against
+        php-versions: [ '8.1', '8.2', '8.3' ]
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up PHP
+      - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          tools: composer:v2
+          extensions: pdo_sqlite
 
       - name: Install dependencies
-        run: composer install --prefer-dist --no-progress --no-suggest
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
 
       - name: Run Pest tests
-        run: composer test
+        run: ./vendor/bin/pest
