--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,14 @@
         }
     },
     "require": {
-        "statamic/cms": "^4.0"
+        "statamic/cms": "^4.49"
     },
     "require-dev": {
         "nunomaduro/collision": "^7.4",
         "orchestra/testbench": "^8.3",
         "pestphp/pest": "^2.4",
-        "pestphp/pest-plugin-watch": "^2.0"
+        "pestphp/pest-plugin-watch": "^2.0",
+        "laravel/pint": "^1.13"
     },
     "config": {
         "allow-plugins": {
