--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         }
     },
     "require": {
-        "statamic/cms": "^4.50 || ^5.0"
+        "statamic/cms": "^5.0"
     },
     "require-dev": {
         "nunomaduro/collision": "^7.4",
